--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -408,7 +408,7 @@ configure terminal
     \item Explain why the above command fails.
     \end{report}
 
-\part{Multicast Routing Exercises}\label{sec:multicast-routing}
+\part{Multicast Routing Exercises\label{sec:multicast-routing}}
     For the rest of the exercises in this chapter, the network topology is given in \hyperref[fig:7.14]{Figure~7.14}. The IP addresses of the hosts and router interfaces are given in \hyperref[fig:7.14]{Figure~7.14}.
     \begin{figure}[H]
         \centering
@@ -605,6 +605,19 @@ configure terminal
     In the following exercise, we use \lstinline{vlc} for video streaming.
     The routers and hosts have the same configurations as in \hyperref[fig:7.14]{Figure~7.14}.
 
+    Prepare the topology as described in \autoref{sec:multicast-routing}.
+
+    Open a \texttt{LXTerminal} in \textit{h1} and \textit{h7} and add routings:
+    \begin{lstlisting}[emph={eth0}]
+route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
+route add -net 128.238.0.0/16 dev eth0
+    \end{lstlisting}
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/terminal}
+    \end{figure}
+
 \section{Multicast Real-Time Video}
     Start \lstinline{vlc} on \textit{h1} and \textit{h7}, by using \lstinline{vlc &}. 
 
@@ -614,7 +627,7 @@ configure terminal
     Then click the \textit{Finish} button.
     Now the \lstinline{vlc} on \textit{h1} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {22224}. 
 
-    On all other hosts, go to the \lstinline{vlc} menu: \textit{Media/Open Network Stream\ldots}. In the following \textit{Open RTP Session} dialog, specify the same group address, port number as that used in \textit{h1}.%and TTL
+    On \textit{h7}, go to the \lstinline{vlc} menu: \textit{Media/Open Network Stream\ldots}. In the following \textit{Open RTP Session} dialog, specify the same group address, port number as that used in \textit{h1}.%and TTL
     Now you should see the received video is displayed on the screen. 
 
     Execute \lstinline{tcpdump ip multicast} or \lstinline{wireshark} in one console to capture the multicast datagrams.
