--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -607,10 +607,13 @@ configure terminal
 
     Prepare the topology as described in \autoref{sec:multicast-routing}.
 
-    Open a \texttt{LXTerminal} in \textit{h1} and \textit{h7} and add routings:
+    Make sure you use a device with GUI (e.g.\ \texttt{utnetlab/gui}) for \textit{h1} and \textit{h7}.
+
+    Open a \texttt{LXTerminal} in \textit{h1} and \textit{h7}, add routings and enable multicast responding if needed:
     \begin{lstlisting}[emph={eth0}]
 route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
 route add -net 128.238.0.0/16 dev eth0
+echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
     \end{lstlisting}
 
     \begin{figure}[H]
@@ -619,16 +622,76 @@ route add -net 128.238.0.0/16 dev eth0
     \end{figure}
 
 \section{Multicast Real-Time Video}
-    Start \lstinline{vlc} on \textit{h1} and \textit{h7}, by using \lstinline{vlc &}. 
+    Start \lstinline{vlc} on \textit{h1} and \textit{h7}:
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/vlc-open}
+    \end{figure}
 
-    On \textit{h1}, go to the \lstinline{vlc} menu: \textit{Media/Stream\ldots }. Chose video file \path{/home/netlab/group.mp4} and press \textit{stream} button. In \textit{Stream output} add \textit{RTP /MPEG Transport Stream} dialog.
-    Then click the \textit{next} button.
-    In the next window, specify the multicast group address to be {224.123.111.101}, with port number {22224} %and TTL 33.
-    Then click the \textit{Finish} button.
+    On \textit{h1} \lstinline{vlc}, go to \textit{Tools} menu and select \textit{Preferences}.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/open-pref}
+    \end{figure}
+    Select \textit{All} for \textit{Show Settings} from the bottom-left corner,
+    and search for \texttt{TTL}.
+    Select \textit{RTP},
+    and enter \texttt{16} for \textit{Hop Limit (TTL)}.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=2]{img/pref}
+    \end{figure}
+
+    Then, go to the \textit{Media} menu and select \textit{Stream\ldots}.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/open-stream}
+    \end{figure}
+    Click \textit{Add}. Choose video file \path{/home/netlab/group.mp4} and press \textit{stream} button.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/stream}
+    \end{figure}
+    Click \textit{Next}.
+    Select \textit{RTP / MPEG Transport Stream} as \textit{New destination} and
+    click \textit{Add}.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/stream2}
+    \end{figure}
+    In the next window, specify the multicast group address to be {224.123.111.101}, with port number {22224}.
+    click the \textit{Next} button.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/stream3}
+    \end{figure}
+    click the \textit{Next} button again.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/stream4}
+    \end{figure}
+    Then click the \textit{Stream} button.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/stream5}
+    \end{figure}
     Now the \lstinline{vlc} on \textit{h1} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {22224}. 
 
-    On \textit{h7}, go to the \lstinline{vlc} menu: \textit{Media/Open Network Stream\ldots}. In the following \textit{Open RTP Session} dialog, specify the same group address, port number as that used in \textit{h1}.%and TTL
+    On \textit{h7} \lstinline{vlc},
+    go to the \textit{Media} menu and select \textit{Open Network Stream\ldots}.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/open-network}
+    \end{figure}
+    Enter \texttt{rtp://@224.123.111.101:2224}.
+    click the \textit{Play} button.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1.6]{img/network}
+    \end{figure}
+
     Now you should see the received video is displayed on the screen. 
+
 
     Execute \lstinline{tcpdump ip multicast} or \lstinline{wireshark} in one console to capture the multicast datagrams.
     In another console, execute \lstinline{tcpdump ip multicast} to monitor the capture process.
