--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -638,37 +638,100 @@ configure terminal
     \item What is the use of the TTL threshold in the router interface?
     \end{report}
 
-\part{Multicast Video Streaming Exercise}
+\part{Multicast Video Streaming Exercise\label{sec:multicast-streaming}}
     In the following exercise, we use \lstinline{vlc} for video streaming.
-    The routers and hosts have the same configurations as in \hyperref[fig:7.14]{Figure~7.14}.
+    
+    In the following exercises, use four hosts and one router. The network topology is given in \hyperref[fig:7.15]{Figure~7.15}\footnote{This figure is not in the book.}, and the corresponding host IP addresses and router IP addresses are given in \hyperref[tab:7.4]{Table~7.4} and \hyperref[tab:7.5]{Table~7.5}, respectively.
+    Make sure you use a device with GUI (e.g.\ \texttt{utnetlab/gui}).
 
-    Prepare the topology as described in \autoref{sec:multicast-routing}.
+    \begin{table}[H]
+        \caption{Hosts IP addresses for \hyperref[fig:7.15]{Figure~7.15} (Table~7.4)}
+        \label{tab:7.4}
+        \centering
+        \begin{tabular}{ *3c }
+            \hline \hline
+            Name & IP Address \\
+            \hline
+                h0 & 128.238.61.100/24 \\
+                h1 & 128.238.62.101/24 \\
+                h2 & 128.238.62.102/24 \\
+            \hline \hline
+            \end{tabular}
+    \end{table}
 
-    Make sure you use a device with GUI (e.g.\ \texttt{utnetlab/gui}) for \textit{h1} and \textit{h7}.
+    \begin{table}[H]
+        \caption{Router IP addresses for \hyperref[fig:7.15]{Figure~7.15} (Table~7.5)}
+        \label{tab:7.5}
+        \centering
+        \begin{tabular}{ *3c }
+            \hline \hline
+            Host & eth0 & eth1 \\
+            \hline
+            router & 128.238.61.1/24 & 128.238.62.1/24 \\
+            \hline \hline
+            \end{tabular}
+    \end{table}
 
-    Open a \texttt{LXTerminal} in \textit{h1} and \textit{h7}, add routings and enable multicast responding if needed:
+    \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+            \node[draw] (h0) at (-2,-1){h0};
+            \node[draw,rounded corners] (router) at (0,0){Router};
+            \node[draw] (h1) at (2,-1){h1};
+            \node[draw] (h2) at (4,-1){h2};
+        
+            \draw (h0) -- (-2,0);
+            \draw (h1) -- (2,0);
+            \draw (h2) -- (4,0);
+            \draw[thick] (4.5,0) -- (router);
+            \draw[thick] (-4.5,0) -- (router);
+            \draw (router) +(1,0.25) node[align=right] {\scriptsize\textit{eth1}};
+            \draw (router) +(-1,0.25) node[align=left] {\scriptsize\textit{eth0}};
+        \end{tikzpicture}
+        \caption{The network topology for \nameref{sec:multicast-routing} (Figure~7.15)}
+        \label{fig:7.15}
+    \end{figure}
+
+    You can use prepared topology as described in \autoref{sec:simple-multicast}.    
+
+    Open a \texttt{LXTerminal} in all hosts and add route for the hosts on the other side of router:
     \begin{lstlisting}[emph={eth0}]
-route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
 route add -net 128.238.0.0/16 dev eth0
-echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
     \end{lstlisting}
 
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/terminal}
+        \includegraphics[scale=2.0]{img/terminal}
     \end{figure}
+
+    Enable PIM multicast routing in all the routers (see \autoref{sec:config-router}). 
+    \begin{lstlisting}[language={cisco}, emph={ethernet0_ip, ethernet1_ip}]
+configure terminal
+    ip multicast-routing
+    interface f0/0
+        ip address 128.238.61.1 255.255.255.0
+        ip pim dense-mode
+        no shutdown
+        exit
+    interface f0/1
+        ip address 128.238.62.1 255.255.255.0
+        ip pim dense-mode
+        no shutdown
+        exit
+    end
+    \end{lstlisting}
 
 \section{** Multicast Real-Time Video}
-    Start \lstinline{vlc} on \textit{h1} and \textit{h7}:
+    Start \lstinline{vlc} on \textit{h0} and \textit{h1}:
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/vlc-open}
+        \includegraphics[scale=2.0]{img/vlc-open}
     \end{figure}
 
-    On \textit{h1} \lstinline{vlc}, go to \textit{Tools} menu and select \textit{Preferences}.
+    On \textit{h0} \lstinline{vlc}, go to \textit{Tools} menu and select \textit{Preferences}.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/open-pref}
+        \includegraphics[scale=2]{img/open-pref}
     \end{figure}
     Select \textit{All} for \textit{Show Settings} from the bottom-left corner,
     and search for \texttt{TTL}.
@@ -676,58 +739,60 @@ echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts
     and enter \texttt{16} for \textit{Hop Limit (TTL)}.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=2]{img/pref}
+        \includegraphics[scale=2.2]{img/pref}
     \end{figure}
 
     Then, go to the \textit{Media} menu and select \textit{Stream\ldots}.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/open-stream}
+        \includegraphics[scale=1.8]{img/open-stream}
     \end{figure}
     Click \textit{Add}. Choose video file \path{/home/netlab/group.mp4} and press \textit{stream} button.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/stream}
+        \includegraphics[scale=1.8]{img/stream}
     \end{figure}
     Click \textit{Next}.
     Select \textit{RTP / MPEG Transport Stream} as \textit{New destination} and
     click \textit{Add}.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/stream2}
+        \includegraphics[scale=1.8]{img/stream2}
     \end{figure}
     In the next window, specify the multicast group address to be {224.123.111.101}, with port number {22224}.
     click the \textit{Next} button.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/stream3}
+        \includegraphics[scale=1.8]{img/stream3}
     \end{figure}
     click the \textit{Next} button again.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/stream4}
+        \includegraphics[scale=1.7]{img/stream4}
     \end{figure}
     Then click the \textit{Stream} button.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/stream5}
+        \includegraphics[scale=1.7]{img/stream5}
     \end{figure}
-    Now the \lstinline{vlc} on \textit{h1} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {22224}. 
+    Now the \lstinline{vlc} on \textit{h0} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {22224}. 
 
-    On \textit{h7} \lstinline{vlc},
+    On \textit{h1} \lstinline{vlc},
     go to the \textit{Media} menu and select \textit{Open Network Stream\ldots}.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/open-network}
+        \includegraphics[scale=1.8]{img/open-network}
     \end{figure}
     Enter \texttt{rtp://@224.123.111.101:2224}.
     click the \textit{Play} button.
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.6]{img/network}
+        \includegraphics[scale=1.9]{img/network}
     \end{figure}
 
-    Now you should see the received video is displayed on the screen. 
+    Now you should see the received video is displayed on the screen.
+
+    You can do the same on the \textit{h2}, too.
 
 
     Execute \lstinline{tcpdump ip multicast} or \lstinline{wireshark} in one console to capture the multicast datagrams.
