--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -390,7 +390,7 @@ ping 128.238.64.104
     \begin{lstlisting}
 telnet 128.238.63.101
     \end{lstlisting}
-    Does multicast messages sent by \lstinline{netspyd} reach the other side of the router? If not, why not?
+    Do multicast messages sent by \lstinline{netspyd} reach the other side of the router? If not, why not?
 
     Add \textit{route} for \textbf{other subnet} to your host and try \lstinline{ping} again:
     \begin{lstlisting}[emph={eth0}]
