chapter 0: update links

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -59,7 +59,7 @@
 \begin{itemize}
     \item Instructor:
     \begin{itemize}
-        \item Ahmad Khonsari
+        \item Ahmad Khonsari: \alert{ak @ipm .ir}
     \end{itemize}
     \item Chief Teaching assistants:
     \begin{itemize}
@@ -124,11 +124,11 @@
             \item Installation instruction available in \href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/blob/master/README.md}{README.md}
             \item Installation instructions \href{https://www.dropbox.com/s/bad8eongryfnylr/GNS3\%20Installation\%20Tutorial.mp4?dl=0}{video in Persian}
         \end{itemize}
-        \item Cisco router image (\href{https://www.dropbox.com/s/8scxq3o8yvb8njw/c3725-adventerprisek9-mz.124-25d.image?dl=0}{c3725-adventerprisek9-mz.124-25d.image})
-        \item Docker images (\href{https://hub.docker.com/r/utnetlab/term}{netlab/term}, \href{https://hub.docker.com/r/utnetlab/gui}{netlab/gui})
-        \item GNS3 Portable projects (Figures)
+        \item Cisco router image (\href{https://github.com/UT-Network-Lab/gns3-figures/blob/main/Cisco/c3725-adventerprisek9-mz.124-25d.image}{c3725-adventerprisek9-mz.124-25d.image})
+        \item Docker images (\href{https://hub.docker.com/r/utnetlab/term}{netlab/term}, \href{https://hub.docker.com/r/utnetlab/gui}{netlab/gui}, \href{https://github.com/orgs/UT-Network-Lab/packages?repo_name=docker-tools}{Github-Packages})
+        \item Laboratory instructions (\href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/releases/latest}{Documents})
+        \item GNS3 Portable projects (\href{https://github.com/UT-Network-Lab/gns3-figures/releases/latest}{Figures})
     \end{itemize}
-    You can download all documents (PDF), figures and docker images from \href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/releases/latest}{GitHub release page}
 
 \end{frame}
 
